      meaning, if you say someexpr.label('foo') == 5, it produces
      the correct "someexpr == 5".
    - _Label propigates "_hide_froms()" so that scalar selects
      behave more properly with regards to FROM clause #574 
    - fix to long name generation when using oid_column as an order by
      (oids used heavily in mapper queries)
    - parenthesis are applied to clauses via a new _Grouping construct.
      uses operator precedence to more intelligently apply parenthesis 
      to clauses, provides cleaner nesting of clauses (doesnt mutate
      clauses placed in other clauses, i.e. no 'parens' flag)
    - added 'modifier' keyword, works like func.<foo> except does not
      add parenthesis.  e.g. select([modifier.DISTINCT(...)]) etc.
    - removed "no group by's in a select thats part of a UNION"
      restriction [ticket:578]
- orm
    - fixed bug in query.instances() that wouldnt handle more than
      on additional mapper or one additional column.
    - "delete-orphan" no longer implies "delete". ongoing effort to 
      separate the behavior of these two operations.
    - many-to-many relationships properly set the type of bind params
      for delete operations on the association table
    - many-to-many relationships check that the number of rows deleted
      from the association table by a delete operation matches the expected 
      results
    - session.get() and session.load() propigate **kwargs through to query
    - fix to polymorphic query which allows the original polymorphic_union
      to be embedded into a correlated subquery [ticket:577]
    - fix to select_by(<propname>=<object instance>) -style joins in conjunction
      with many-to-many relationships, bug introduced in r2556 
    - the "primary_key" argument to mapper() is propigated to the "polymorphic"
      mapper.  primary key columns in this list get normalized to that of the mapper's 
      local table.