@@ -11,6 +11,9 @@
       behave more properly with regards to FROM clause #574 
     - fix to long name generation when using oid_column as an order by
       (oids used heavily in mapper queries)
+    - significant speed improvement to ResultProxy, pre-caches
+      TypeEngine dialect implementations and saves on function calls
+      per column
     - parenthesis are applied to clauses via a new _Grouping construct.
       uses operator precedence to more intelligently apply parenthesis 
       to clauses, provides cleaner nesting of clauses (doesnt mutate
